# ChangeLog for sys-devel/gcc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*gcc-4.5.0-r3 (27 May 2010)
*gcc-4.4.4-r2 (27 May 2010)
*gcc-4.4.3-r6 (27 May 2010)

  26 May 2010; <zorry@gentoo.org> -gcc-4.4.3-r5.ebuild,
  +gcc-4.4.3-r6.ebuild, -gcc-4.4.4-r1.ebuild, +gcc-4.4.4-r2.ebuild,
  -gcc-4.5.0-r2.ebuild, +gcc-4.5.0-r3.ebuild:
  Updated the piepatches to 0.4.4 and specs to 0.2.0 and mark 4.4.3-r6 stable for amd64

*gcc-4.5.0-r2 (25 May 2010)
*gcc-4.4.4-r1 (25 May 2010)
*gcc-4.4.3-r5 (25 May 2010)

  25 May 2010; <zorry@gentoo.org> -gcc-4.4.3-r4.ebuild,
  +gcc-4.4.3-r5.ebuild, -gcc-4.4.4.ebuild, +gcc-4.4.4-r1.ebuild,
  -gcc-4.5.0-r1.ebuild, +gcc-4.5.0-r2.ebuild:
  Updated the piepatches to 0.4.2

  15 May 2010; <zorry@gentoo.org> -gcc-4.3.4-r4.ebuild:
  GCC 4.4.3 going stable soon.

*gcc-4.4.4 (04 May 2010)

  04 May 2010; <zorry@gentoo.org> +gcc-4.4.4.ebuild:
  New GCC 4.4.4

*gcc-4.5.0-r1 (01 May 2010)
*gcc-4.4.3-r4 (01 May 2010)
*gcc-4.3.4-r4 (01 May 2010)

  01 May 2010; <zorry@gentoo.org> -gcc-4.3.4-r3.ebuild,
  +gcc-4.3.4-r4.ebuild, -gcc-4.4.3-r3.ebuild, +gcc-4.4.3-r4.ebuild,
  -gcc-4.5.0.ebuild, +gcc-4.5.0-r1.ebuild:
  Bumped to the new piepatchset with the new toolchain.eclass

  30 Apr 2010; Peter Hjalmarsson <xake@gentoo.org> gcc-4.4.3-r3.ebuild:
  Bumped patchset

  28 Apr 2010; Peter Hjalmarsson <xake@gentoo.org> gcc-4.5.0.ebuild,
  metadata.xml:
  Updated ebuild against portage, adding patchsets and upping som deps.

*gcc-4.5.0 (15 Apr 2010)

  15 Apr 2010; <zorry@gentoo.org> +gcc-4.5.0.ebuild:
  Added GCC-4.5.0 with espf-0.3.9

*gcc-4.4.3-r3 (15 Apr 2010)
*gcc-4.3.4-r3 (15 Apr 2010)

  15 Apr 2010; <zorry@gentoo.org> -gcc-4.3.4-r2.ebuild,
  +gcc-4.3.4-r3.ebuild, -gcc-4.4.3-r1.ebuild, -gcc-4.4.3-r2.ebuild,
  +gcc-4.4.3-r3.ebuild:
  Updated the espf-patchset to 0.3.9 on gcc 4.3.4 and gcc 4.4.3

*gcc-4.4.3-r2 (11 Apr 2010)

  11 Apr 2010; <zorry@gentoo.org> +gcc-4.4.3-r2.ebuild:
  The espf patchset updated to 0.3.8
