@@ -4,15 +4,16 @@ DIST gcc-4.4.3-piepatches-v0.4.4.tar.bz2 16908 RMD160 18b627c69c8d425ce717e341d6
 DIST gcc-4.4.3-specs-0.2.0.tar.bz2 2004 RMD160 0a013f95029a170eeea3cb6ccbfd65f64b66f465 SHA1 61bd3c13400772ec4d5d4fcee297e3d86adbd065 SHA256 f6c7cb99beead66dd4d06f7004c5731a9360330cbe878ce79792c618e008eed2
 DIST gcc-4.4.3-uclibc-patches-1.0.tar.bz2 3014 RMD160 4646449073c54a43f1b72382ab3c611789e6cb59 SHA1 7bb2d5ae871f1bbed51198c274518d2c8bc06689 SHA256 4b44eb274f27cc8ffb0e61e90d829a7a87fd0b49df6f31e7cb3071cc96c00df1
 DIST gcc-4.4.3.tar.bz2 62944934 RMD160 b51afac3cb77ee3dc09d29c2f85936482ed82ab2 SHA1 619766282734728539ce58a5c383cb371f1999c7 SHA256 97ed664694b02b4d58ac2cafe443d02a388f9cb3645e7778843b5086a5fec040
-DIST gcc-4.4.4-patches-1.0.tar.bz2 12757 RMD160 96b996fb56de62d45d6fada55bb952e29df476c9 SHA1 57a3797a8166512dc8c812a8185f390c42bac14c SHA256 dd7266dc36162245ab3b1f2bb2e50b9e6a3e9dca823a31ced36963b954702aeb
-DIST gcc-4.4.4-uclibc-patches-1.0.tar.bz2 3017 RMD160 9757d602a6347d1d65e617eccc6631c66da33830 SHA1 dbac9c55c3c3c398a5b9c09596f030efe1fe4a4e SHA256 443f0ec8d497a23cabaf47a9c2a4ac0597a40b2dbe64e7282b776176b4366291
+DIST gcc-4.4.4-patches-1.0.tar.bz2 16573 RMD160 b36bb4074b25a09efda5466d296c0b3a5327bbcc SHA1 7cb7d9b2f8a6a46992e83aad4b967b150d01fbf2 SHA256 0fc84cba653ebb2638b1b6668e80fdf8d835e47fbe6a44fa53905706f3a83164
+DIST gcc-4.4.4-piepatches-v0.4.4.1.tar.bz2 16953 RMD160 192e80f38572719fb007304e2e079a6c2244bf4a SHA1 6b9798088ed35b0a8d1aa1f3d348e0d1009785c9 SHA256 089f09d9f60c3045dfe708a80668412022c842e0dcfe18463c2e93bf10923c89
+DIST gcc-4.4.4-uclibc-patches-1.0.tar.bz2 3014 RMD160 f849627745442bd3885dc7892aac0b22a5b6397c SHA1 6807f546676ac608100eb0de5b67e42af90b6d4c SHA256 40bfd13b132567dca198d815a602d2cfb49046a22425450eb3db67ed280feaea
 DIST gcc-4.4.4.tar.bz2 63018867 RMD160 b41f26be28cc1ef643135230dfa94876d8a02dd6 SHA1 45d1e7242a08cbb7a343ed2bf640a5afd0ebe098 SHA256 e1c13696b45752ad3f652304fab5120a43a8a5c0f438d3bda78cf16b620c0c58
 DIST gcc-4.5.0-patches-1.1.tar.bz2 6938 RMD160 b4f18fad10f44c44d1ca184254298261c2521caa SHA1 a80f0e65ae0d8045ba93a71f6082889b09347157 SHA256 fb83b1ff1634f78f6e14e16775e0f67e1e1c5ede114af83c1baf9640b477147a
 DIST gcc-4.5.0-piepatches-v0.4.4.tar.bz2 14257 RMD160 b877d2b167fe6914e6b0f36538c5612eb672c641 SHA1 5654aed4ad9a5c3189b70b1dc136dee13d9a636a SHA256 a381ccfb12e10bd29c8e0c1518708c767d127ce23b12d597c9a7e1c477b87c70
 DIST gcc-4.5.0-uclibc-patches-1.0.tar.bz2 2281 RMD160 860f77f9ae11f24a760cf763b9965ef64dd9d416 SHA1 ec67f80f0b5da78edbe6a85eb3b93090a628f535 SHA256 5faa9c4eac7c67afeae081a936dd6406f11a930c3c240a83d76ffdee74b04e6f
 DIST gcc-4.5.0.tar.bz2 65941778 RMD160 84c9b2bf117ce3e29cba8fa2cd62fa4f8f7f5749 SHA1 4beb8366ce1883f37255aa57f0258e7d3cd13a9b SHA256 8293e9efa68a8ec0fdd0dae9c9bd128a8e742566acd9c8fbcfe79d98ed3756c8
 EBUILD gcc-4.4.3-r6.ebuild 2434 RMD160 2c95422cadb9796b427d15d607f96f6d4b34e361 SHA1 f9de77a57c8760f71016b9107c58243bcb9f3505 SHA256 47dacd231ccf86c709b670fa8477de42d6eb1a8a462c408912fc079095a0993d
-EBUILD gcc-4.4.4-r2.ebuild 2477 RMD160 10efd8113c9411734eb3c63ad8913e797d4bf9fb SHA1 b9a056c89f502ac8be80cf3bef83c9af794b6704 SHA256 b9875c0679a4c9e980726125a2a5d5ffe2fa9dea6e06507afb824790b916085a
+EBUILD gcc-4.4.4-r3.ebuild 2459 RMD160 3b24f7e843c235787f2517342bb4853518cc32fb SHA1 ad7900d063d3623238ec3c7957f85ef48f15602d SHA256 72443a9cd75d71a5d467d009f02415b79beb7e4dfd321381d4b8aa52176f335b
 EBUILD gcc-4.5.0-r3.ebuild 2244 RMD160 2e65cddcbf8d7f4ac539fa711eaee5fbe8e3b354 SHA1 58c7228161fbd577e182ec57e81c911c3f86966c SHA256 3ce62a027bb36a809019a80087de468ce1a558f2239fae1cea0814e09f6be9ed
-MISC ChangeLog 3383 RMD160 f893a491b1f51befcdb51476cbc85377cafe750d SHA1 47033d843225b70e5088e694b33aaf82c6cff1f4 SHA256 62a08a2fb7576ac13c242d88f33d564354c19fc90041aea6c1098039dd28d9a7
+MISC ChangeLog 3537 RMD160 9b427f85e8195ef68d6e9bb83ec806eaf26c8ad8 SHA1 94be306a4fd7f45adb12257e0a6a4ca30ca4838b SHA256 a1647435a9db5d32d41bc9d937c78671500109d342b8caa3669bb0b87f294295
 MISC metadata.xml 1678 RMD160 7d8df302684ecf0e23caf763d3fcee267d40866b SHA1 f9a035b4a7bf8a6fbf9e1627f777b86f30813517 SHA256 3e67d554a8e3135943623ab276d6871582fda0cdb556d31531b369d8c0b277d7
