@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gcc-4.4.4-r3 (15 Jun 2010)
+
+  15 Jun 2010; <zorry@gentoo.org> -gcc-4.4.4-r2.ebuild,
+  +gcc-4.4.4-r3.ebuild:
+  Update it to support gentoos gcc patchset
+
 *gcc-4.5.0-r3 (27 May 2010)
 *gcc-4.4.4-r2 (27 May 2010)
 *gcc-4.4.3-r6 (27 May 2010)
